--- a/mvvm_hilt_room_retro_test/src/main/res/values/strings.xml
+++ b/mvvm_hilt_room_retro_test/src/main/res/values/strings.xml
@@ -13,7 +13,9 @@
     <string name="delete">Delete</string>
     <string name="refresh_list">Refresh List</string>
     <string name="add_movie">Add Movie</string>
-    <string name="movie_cout">Movie Cout</string>
+    <string name="movie_count">Movie Cout</string>
     <string name="movie_picture">Movie Picture</string>
     <string name="choose_photo">Choose Photo</string>
+    <string name="sample_group">Sample Group</string>
+    <string name="greater_than"><![CDATA[>]]></string>
 </resources>
