--- a/secure_data/src/main/res/values/strings.xml
+++ b/secure_data/src/main/res/values/strings.xml
@@ -62,7 +62,7 @@
     <string name="account_name">Account Name</string>
     <string name="account_number">Account Number</string>
     <string name="account_password">Account Password</string>
-    <string name="cvv2">CVV2</string>
+    <string name="cvv2">CVV</string>
     <string name="date">Date</string>
     <string name="bank_name">Bank Name</string>
     <string name="card_number">Card Number</string>
@@ -84,10 +84,13 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="signup">SignUp</string>
-    <string name="card_name">Card name</string>
+    <string name="card_name">Card Name</string>
     <string name="sample_card_number">8888 8888 8888 8888</string>
     <string name="colon">:</string>
     <string name="add_bank_card">Add bank card</string>
+    <string name="card_date">Card Date</string>
+    <string name="first_password">First Password</string>
+    <string name="second_password">Second Password</string>
 
 
     //endregion
